# HW_16

homework_poetry/: pyproject.toml
new_poetry_project/: pyproject.toml
with_pip/: requirements.txt  requirements_freeze.txt
with_pipenv/: Pipfile
with_poetry/: pyproject.toml
