[project]
name = "homework-poetry"
version = "0.1.0"
description = "Домашняя работа по использованию poetry"
authors = [
    {name = "Виктория",email = "viktoriacheglakova@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selene (>=1.0.2,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]

[tool.poetry]
packages = [{include = "homework_poetry", from = "src"}]


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
